--- a/config/printer.cfg
+++ b/config/printer.cfg
@@ -200,6 +200,8 @@ z_hop: 10
 [force_move]
 enable_force_move: True
 
+[exclude_object]
+
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
