New backup from 30-12-23

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ path_moonrakercfg=/home/pi/printer_data/config/moonraker.conf
 path_crowsnestcfg=/home/pi/printer_data/config/crowsnest.conf
 path_adxlcfg=/home/pi/printer_data/config/adxl.cfg
 path_macroscfg=/home/pi/printer_data/config/macros.cfg
-path_sonarcfg=/home/pi/printer_data/config/sonar.cfg
+path_sonarcfg=/home/pi/printer_data/config/sonar.conf
 
 #back up whole folder syntax:
 #path_klipperdata=/home/pi/printer_data/
