New backup from 30-12-23

--- a/config/macros.cfg
+++ b/config/macros.cfg
@@ -22,37 +22,46 @@ gcode:
 # start_print HOTEND_TEMP={material_print_temperature_layer_0} BED_TEMP={material_bed_temperature_layer_0}
 gcode:
     BED_MESH_PROFILE LOAD=default
+	{% set noOozeToolTemp = 150 %}
 	{% set toolTemp = params.HOTEND_TEMP|int %}
 	{% set bedTemp = params.BED_TEMP|int %}
+
+    # Adjust Z-offset when using higher print temparatures (for whatever reason, it was like this)
 	SET_GCODE_OFFSET Z=0
 	{% if toolTemp >= 221 %}
 		SET_GCODE_OFFSET Z=0.03
 	{% endif %}
+
+    # Heat bed to final temp and extruder to no-ooze temp
 	SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={bedTemp}
-	SET_HEATER_TEMPERATURE HEATER=extruder TARGET=150
-	M82 								# absolute extrusion mode
-	M220 S100 							# Reset Feedrate
-	M221 S100 							# Reset Flowrate
-	#SET_VELOCITY_LIMIT VELOCITY=200 ACCEL=1000 ACCEL_TO_DECEL=500 SQUARE_CORNER_VELOCITY=5
+	SET_HEATER_TEMPERATURE HEATER=extruder TARGET={noOozeToolTemp}
 
-	#home all axis and leave printhead in center of the bed for quick Z homing once the bed is 15 degrees below its target
-	G28
-	SET_HEATER_TEMPERATURE HEATER=extruder TARGET=150
-	TEMPERATURE_WAIT SENSOR=heater_bed MINIMUM={bedTemp -15}	# wait for bed to be over 50
-	TEMPERATURE_WAIT SENSOR=extruder MINIMUM=140
-	SET_HEATER_TEMPERATURE HEATER=extruder TARGET=0
-	G28	Z							# home all axes
-	SET_HEATER_TEMPERATURE HEATER=extruder TARGET={toolTemp -70}
+	# Home X- and Y-axis
+	G28 X Y
+    # Leave printhead in center of the bed for quick Z homing
+    G90
+	G0 X117.5 Y117.5
 
-	#move to the side, wait untill the bed is within 10 deg from target heat the hotend
+    # Once no-ooze nozzle temp is reached, home Z-axis
+	TEMPERATURE_WAIT SENSOR=extruder MINIMUM={noOozeToolTemp}
+	G28	Z
+
+    # Set final nozzle temperature and move to the sides to prevent oozing on the bed
+	SET_HEATER_TEMPERATURE HEATER=extruder TARGET={toolTemp}
+
 	G90
 	G0 Z20
 	G0 X0 Y0
-	TEMPERATURE_WAIT SENSOR=heater_bed MINIMUM={bedTemp - 10}
-	SET_HEATER_TEMPERATURE HEATER=extruder TARGET={toolTemp}
-	TEMPERATURE_WAIT SENSOR=extruder MINIMUM={toolTemp - 1}	#start printing 1 deg before reaching setpoint
+    
+	TEMPERATURE_WAIT SENSOR=heater_bed MINIMUM={bedTemp}
+	TEMPERATURE_WAIT SENSOR=extruder MINIMUM={toolTemp}
 
-	# And we can now draw our purge line
+    # Reset some stuff (it was like this)
+	M82 								# absolute extrusion mode
+	M220 S100 							# Reset Feedrate
+	M221 S100 							# Reset Flowrate
+
+	# Purge line
 	G92 E0 								# Reset Extruder
 	G1 Z2.0 F3000 						# Move Z Axis up
 	G1 X0 Y20 Z0.28						# Move to start position
