New backup from 02-01-24

--- a/config/moonraker.conf
+++ b/config/moonraker.conf
@@ -96,6 +96,14 @@ origin: https://github.com/CasperVerswijvelt/klipper-backup.git
 is_system_service: False
 primary_branch: main
 
+[update_manager Klipper-Adaptive-Meshing-Purging]
+type: git_repo
+channel: dev
+path: ~/Klipper-Adaptive-Meshing-Purging
+origin: https://github.com/kyleisah/Klipper-Adaptive-Meshing-Purging.git
+managed_services: klipper
+primary_branch: main
+
 [power Printer]
 type: gpio
 pin: gpiochip0/gpio2
