--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ path_crowsnestcfg=/home/pi/printer_data/config/crowsnest.conf
 path_adxlcfg=/home/pi/printer_data/config/adxl.cfg
 path_macroscfg=/home/pi/printer_data/config/macros.cfg
 path_sonarcfg=/home/pi/printer_data/config/sonar.conf
-
+path_kampcfg=/home/pi/printer_data/config/KAMP_Settings.cfg
 #back up whole folder syntax:
 #path_klipperdata=/home/pi/printer_data/
