--- a/config/macros.cfg
+++ b/config/macros.cfg
@@ -21,7 +21,7 @@ gcode:
 # put the following in the Cura start code and remove everything else:
 # start_print HOTEND_TEMP={material_print_temperature_layer_0} BED_TEMP={material_bed_temperature_layer_0}
 gcode:
-    BED_MESH_PROFILE LOAD=default
+    
 	{% set noOozeToolTemp = 150 %}
 	{% set toolTemp = params.HOTEND_TEMP|int %}
 	{% set bedTemp = params.BED_TEMP|int %}
@@ -31,6 +31,15 @@ gcode:
 	{% if toolTemp >= 221 %}
 		SET_GCODE_OFFSET Z=0.03
 	{% endif %}
+
+    # Load default profile
+    BED_MESH_PROFILE LOAD=default
+
+    # Calibrate mesh adaptively
+	#SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={60}
+	#G28
+    #TEMPERATURE_WAIT SENSOR=heater_bed MINIMUM={60}
+    #BED_MESH_CALIBRATE
 
     # Heat bed to final temp and extruder to no-ooze temp
 	SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={bedTemp}
@@ -62,14 +71,14 @@ gcode:
 	M221 S100 							# Reset Flowrate
 
 	# Purge line
-	G92 E0 								# Reset Extruder
-	G1 Z2.0 F3000 						# Move Z Axis up
-	G1 X0 Y20 Z0.28						# Move to start position
-	G1 X0 Y200.0 Z0.28 E15   			# Draw the first line
-	G1 X0 Y200.0 Z0.28 					# Move to side a little
-	G1 X0.5 Y20 Z0.28 E30 				# Draw the second line
-	G92 E0 								# Reset Extruder
-	G1 Z2.0 F3000 						# Move Z Axis up
+	#G92 E0 								# Reset Extruder
+	#G1 Z2.0 F3000 						# Move Z Axis up
+	#G1 X0 Y20 Z0.28						# Move to start position
+	#G1 X0 Y200.0 Z0.28 E15   			# Draw the first line
+	#G1 X0 Y200.0 Z0.28 					# Move to side a little
+	#G1 X0.5 Y20 Z0.28 E30 				# Draw the second line
+	#G92 E0 								# Reset Extruder
+	#G1 Z2.0 F3000 						# Move Z Axis up
 
 [delayed_gcode delayed_printer_off]
 initial_duration: 0.
