--- a/config/macros.cfg
+++ b/config/macros.cfg
@@ -45,8 +45,8 @@ gcode:
 	SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={bedTemp}
 	SET_HEATER_TEMPERATURE HEATER=extruder TARGET={noOozeToolTemp}
 
-	# Home X- and Y-axis
-	G28 X Y
+	# Home X- and Y-axis (Also dry home Z-axis before it starts drooping) 
+	G28 X Y Z
     # Leave printhead in center of the bed for quick Z homing
     G90
 	G0 X117.5 Y117.5
@@ -54,6 +54,9 @@ gcode:
     # Once no-ooze nozzle temp is reached, home Z-axis
 	TEMPERATURE_WAIT SENSOR=extruder MINIMUM={noOozeToolTemp}
 	G28	Z
+
+    # First nozzle wipe
+    WIPE_NOZZLE
 
     # Set final nozzle temperature and move to the sides to prevent oozing on the bed
 	SET_HEATER_TEMPERATURE HEATER=extruder TARGET={toolTemp}
@@ -64,6 +67,10 @@ gcode:
     
 	TEMPERATURE_WAIT SENSOR=heater_bed MINIMUM={bedTemp}
 	TEMPERATURE_WAIT SENSOR=extruder MINIMUM={toolTemp}
+
+    # Wipe again and go to center of bed
+    WIPE_NOZZLE
+    G0 X117.5 Y117.5
 
     # Reset some stuff (it was like this)
 	M82 								# absolute extrusion mode
@@ -165,6 +172,34 @@ gcode:
     G1 E50 F150                    ; prime nozzle with filament
     G1 E-100 F1000                 ; retract filament completely, set to E380 for Bowden
     M82                            ; set extruder to absolute
+
+[gcode_macro WIPE_NOZZLE]
+variable_start_x: 249
+variable_start_y: 42
+variable_start_z: 10
+variable_wipe_dist: -42
+variable_wipe_qty: 5
+variable_wipe_spd: 200
+variable_raise_distance: 30
+
+gcode:
+ {% if "xyz" not in printer.toolhead.homed_axes %}
+   G28
+ {% endif %}
+ 
+ G90                                            ; absolute positioning
+ ## Move nozzle to start position
+ G1 Z{start_z} F1500
+ G1 X{start_x} Y{start_y} F6000
+
+ ## Wipe nozzle
+ {% for wipes in range(1, (wipe_qty + 1)) %}
+   G1 Y{start_y + wipe_dist} F{wipe_spd * 60}
+   G1 Y{start_y} F{wipe_spd * 60}
+ {% endfor %}
+
+ ## Raise nozzle
+ G1 Z{raise_distance}
 
 [gcode_macro M204]
 rename_existing: M204.1
