--- a/config/macros.cfg
+++ b/config/macros.cfg
@@ -51,6 +51,10 @@ gcode:
     G90
 	G0 X117.5 Y117.5
 
+    # Reset to correct temp
+    SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={bedTemp}
+	SET_HEATER_TEMPERATURE HEATER=extruder TARGET={noOozeToolTemp}
+
     # Once no-ooze nozzle temp is reached, home Z-axis
 	TEMPERATURE_WAIT SENSOR=extruder MINIMUM={noOozeToolTemp}
 	G28	Z
@@ -64,6 +68,9 @@ gcode:
 	G90
 	G0 Z20
 	G0 X0 Y0
+
+    # Reset to correct temp
+    SET_HEATER_TEMPERATURE HEATER=extruder TARGET={toolTemp}
     
 	TEMPERATURE_WAIT SENSOR=heater_bed MINIMUM={bedTemp}
 	TEMPERATURE_WAIT SENSOR=extruder MINIMUM={toolTemp}
@@ -174,9 +181,9 @@ gcode:
     M82                            ; set extruder to absolute
 
 [gcode_macro WIPE_NOZZLE]
-variable_start_x: 249
+variable_start_x: 248.5
 variable_start_y: 42
-variable_start_z: 10
+variable_start_z: 11.5
 variable_wipe_dist: -42
 variable_wipe_qty: 5
 variable_wipe_spd: 200
