--- a/config/macros.cfg
+++ b/config/macros.cfg
@@ -26,6 +26,9 @@ gcode:
 	{% set toolTemp = params.HOTEND_TEMP|int %}
 	{% set bedTemp = params.BED_TEMP|int %}
 
+	{% set purgeX = 248 %}
+	{% set purgeY = 50 %}
+
     # Adjust Z-offset when using higher print temparatures (for whatever reason, it was like this)
 	SET_GCODE_OFFSET Z=0
 	{% if toolTemp >= 221 %}
@@ -47,37 +50,31 @@ gcode:
 
 	# Home X- and Y-axis (Also dry home Z-axis before it starts drooping) 
 	G28 X Y Z
-    # Leave printhead in center of the bed for quick Z homing
-    G90
-	G0 X117.5 Y117.5
 
-    # Reset to correct temp
+    # Reset to correct temp after homing
     SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={bedTemp}
 	SET_HEATER_TEMPERATURE HEATER=extruder TARGET={noOozeToolTemp}
 
-    # Once no-ooze nozzle temp is reached, home Z-axis
+    # Leave printhead over purge bucket
+    G90
+	G0 X{purgeX} Y{purgeY}
+
+    # Once no-ooze nozzle temp is reached, wipe nozzle and home Z again
 	TEMPERATURE_WAIT SENSOR=extruder MINIMUM={noOozeToolTemp}
-	G28	Z
-
-    # First nozzle wipe
     WIPE_NOZZLE
-
-    # Set final nozzle temperature and move to the sides to prevent oozing on the bed
-	SET_HEATER_TEMPERATURE HEATER=extruder TARGET={toolTemp}
-
-	G90
-	G0 Z20
-	G0 X0 Y0
-
-    # Reset to correct temp
+	G28	Z
+    # Set final nozzle temperature
     SET_HEATER_TEMPERATURE HEATER=extruder TARGET={toolTemp}
+
+    # Leave printhead over purge bucket to catch drooping
+    G90
+	G0 X{purgeX} Y{purgeY}
     
 	TEMPERATURE_WAIT SENSOR=heater_bed MINIMUM={bedTemp}
 	TEMPERATURE_WAIT SENSOR=extruder MINIMUM={toolTemp}
 
-    # Wipe again and go to center of bed
+    # Final nozzle wipe
     WIPE_NOZZLE
-    G0 X117.5 Y117.5
 
     # Reset some stuff (it was like this)
 	M82 								# absolute extrusion mode
@@ -85,14 +82,14 @@ gcode:
 	M221 S100 							# Reset Flowrate
 
 	# Purge line
-	#G92 E0 								# Reset Extruder
-	#G1 Z2.0 F3000 						# Move Z Axis up
-	#G1 X0 Y20 Z0.28						# Move to start position
-	#G1 X0 Y200.0 Z0.28 E15   			# Draw the first line
-	#G1 X0 Y200.0 Z0.28 					# Move to side a little
-	#G1 X0.5 Y20 Z0.28 E30 				# Draw the second line
-	#G92 E0 								# Reset Extruder
-	#G1 Z2.0 F3000 						# Move Z Axis up
+	G92 E0 								# Reset Extruder
+	G1 Z2.0 F3000 						# Move Z Axis up
+	G1 X2 Y20 Z0.28						# Move to start position
+	G1 X2 Y200.0 Z0.28 E15   			# Draw the first line
+	G1 X2 Y200.0 Z0.28 					# Move to side a little
+	G1 X2.5 Y20 Z0.28 E30 				# Draw the second line
+	G92 E0 								# Reset Extruder
+	G1 Z2.0 F3000 						# Move Z Axis up
 
 [delayed_gcode delayed_printer_off]
 initial_duration: 0.
@@ -181,13 +178,13 @@ gcode:
     M82                            ; set extruder to absolute
 
 [gcode_macro WIPE_NOZZLE]
-variable_start_x: 248.5
+variable_start_x: 248
 variable_start_y: 42
-variable_start_z: 11.5
+variable_start_z: 2
 variable_wipe_dist: -42
 variable_wipe_qty: 5
 variable_wipe_spd: 200
-variable_raise_distance: 30
+variable_raise_distance: 20
 
 gcode:
  {% if "xyz" not in printer.toolhead.homed_axes %}
