New backup from 15-02-24

--- a/config/printer.cfg
+++ b/config/printer.cfg
@@ -20,7 +20,7 @@
 
 [include macros.cfg]
 [include mainsail.cfg]
-[include KAMP_Settings.cfg]
+#[include KAMP_Settings.cfg]
 #[include adxl.cfg]
 
 [stepper_x]
@@ -137,25 +137,41 @@ serial: /tmp/klipper_host_mcu
 # Before printing the PROBE_CALIBRATE command needs to be issued
 # to run the probe calibration procedure, described at
 # docs/Probe_Calibrate.md, to find the correct z_offset.
-[probe]
-pin: PA4
-x_offset: 0.0
-y_offset: 0.0
-#z_offset: -0.175
-speed: 1
-lift_speed: 5
-samples_tolerance: 0.05
-samples_tolerance_retries: 2
-samples: 3
-activate_gcode:
-	TARE_PROBE
+#[probe]
+#pin: PA4
+#x_offset: 0.0
+#y_offset: 0.0
+##z_offset: -0.175
+#speed: 1
+#lift_speed: 5
+#samples_tolerance: 0.05
+#samples_tolerance_retries: 2
+#samples: 3
+#activate_gcode:
+#	TARE_PROBE
+#
+#[output_pin probe_tare]
+#pin: !PA5
+#value: 1
 
-[output_pin probe_tare]
-pin: !PA5
-value: 1
+#[output_pin probe_enable]
+#pin: PB2
 
-[output_pin probe_enable]
-pin: PB2
+# BED DISTANCE SENSOR
+[BDsensor] 
+scl_pin:host:gpio17 
+sda_pin:host:gpio27
+#scl_pin: PB12
+#sda_pin: PA15
+delay: 20 # 20us per pulse, this value should be >=18 but must be below 30
+z_offset:0 # this `z_offset` must be set to 0. 
+z_adjust:0.0 # z axis adjustment, replace the z_offset function. within -0.3 to 0.3mm
+x_offset: -34
+y_offset: 0
+#no_stop_probe: # enable this for fast probe, the toolhead will not stop at the probe point.
+position_endstop: 0.8 # this value must >0.5, the Z axis will be triggered after it measured the distance is below this value(mm) while homing z, recommend value is 0.5~1.0
+#speed:0.8 # this speed only works for the z tilt and PROBE_ACCURACY command.
+
 
 # Disabled since I removed filament sensor for now
 # [filament_switch_sensor filament_sensor]
@@ -241,9 +257,6 @@ enable_force_move: True
 #*# max_x = 219.97
 #*# min_y = 20.0
 #*# max_y = 219.97
-#*#
-#*# [probe]
-#*# z_offset = -0.275
 #*#
 #*# [input_shaper]
 #*# shaper_type_x = zv
