--- a/config/macros.cfg
+++ b/config/macros.cfg
@@ -9,9 +9,9 @@ gcode:
 
 [gcode_macro RUN_ABL]
 gcode:
-	M190 S60
+	#M190 S60
 	G28
-	M104 S0		#switch off heater as it was switched on after homing
+	#M104 S0		#switch off heater as it was switched on after homing
 	BED_MESH_CALIBRATE
 	SAVE_CONFIG
 	M140 S0
@@ -36,39 +36,40 @@ gcode:
 	{% endif %}
 
     # Load default profile
-    BED_MESH_PROFILE LOAD=default
+    #BED_MESH_PROFILE LOAD=default
 
     # Calibrate mesh adaptively
-	#SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={60}
-	#G28
-    #TEMPERATURE_WAIT SENSOR=heater_bed MINIMUM={60}
-    #BED_MESH_CALIBRATE
+	SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={60}
+	G28
+    TEMPERATURE_WAIT SENSOR=heater_bed MINIMUM={60}
+    BED_MESH_CALIBRATE
 
     # Heat bed to final temp and extruder to no-ooze temp
 	SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={bedTemp}
-	SET_HEATER_TEMPERATURE HEATER=extruder TARGET={noOozeToolTemp}
+	#SET_HEATER_TEMPERATURE HEATER=extruder TARGET={noOozeToolTemp}
 
 	# Home X- and Y-axis (Also dry home Z-axis before it starts drooping) 
-	G28 X Y Z
+	#G28 X Y Z
 
     # Reset to correct temp after homing
-    SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={bedTemp}
-	SET_HEATER_TEMPERATURE HEATER=extruder TARGET={noOozeToolTemp}
+    #SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={bedTemp}
+	#SET_HEATER_TEMPERATURE HEATER=extruder TARGET={noOozeToolTemp}
 
     # Leave printhead over purge bucket
     G90
 	G0 X{purgeX} Y{purgeY}
 
     # Once no-ooze nozzle temp is reached, wipe nozzle and home Z again
-	TEMPERATURE_WAIT SENSOR=extruder MINIMUM={noOozeToolTemp}
-    WIPE_NOZZLE
-	G28	Z
+	#TEMPERATURE_WAIT SENSOR=extruder MINIMUM={noOozeToolTemp}
+    #WIPE_NOZZLE
+	#G28	Z
+
     # Set final nozzle temperature
     SET_HEATER_TEMPERATURE HEATER=extruder TARGET={toolTemp}
 
     # Leave printhead over purge bucket to catch drooping
-    G90
-	G0 X{purgeX} Y{purgeY}
+    #G90
+	#G0 X{purgeX} Y{purgeY}
     
 	TEMPERATURE_WAIT SENSOR=heater_bed MINIMUM={bedTemp}
 	TEMPERATURE_WAIT SENSOR=extruder MINIMUM={toolTemp}
@@ -81,15 +82,7 @@ gcode:
 	M220 S100 							# Reset Feedrate
 	M221 S100 							# Reset Flowrate
 
-	# Purge line
-	G92 E0 								# Reset Extruder
-	G1 Z2.0 F3000 						# Move Z Axis up
-	G1 X2 Y20 Z0.28						# Move to start position
-	G1 X2 Y200.0 Z0.28 E15   			# Draw the first line
-	G1 X2 Y200.0 Z0.28 					# Move to side a little
-	G1 X2.5 Y20 Z0.28 E30 				# Draw the second line
-	G92 E0 								# Reset Extruder
-	G1 Z2.0 F3000 						# Move Z Axis up
+	LINE_PURGE
 
 [delayed_gcode delayed_printer_off]
 initial_duration: 0.
