New backup from 06-03-24

--- a/config/macros.cfg
+++ b/config/macros.cfg
@@ -41,47 +41,25 @@ gcode:
     # Calibrate mesh adaptively
 	SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={60}
 	G28
+    SET_HEATER_TEMPERATURE HEATER=extruder TARGET={noOozeToolTemp}
     TEMPERATURE_WAIT SENSOR=heater_bed MINIMUM={60}
+    
     BED_MESH_CALIBRATE
 
     # Heat bed to final temp and extruder to no-ooze temp
 	SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={bedTemp}
-	#SET_HEATER_TEMPERATURE HEATER=extruder TARGET={noOozeToolTemp}
-
-	# Home X- and Y-axis (Also dry home Z-axis before it starts drooping) 
-	#G28 X Y Z
-
-    # Reset to correct temp after homing
-    #SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={bedTemp}
-	#SET_HEATER_TEMPERATURE HEATER=extruder TARGET={noOozeToolTemp}
 
     # Leave printhead over purge bucket
     G90
 	G0 X{purgeX} Y{purgeY}
 
-    # Once no-ooze nozzle temp is reached, wipe nozzle and home Z again
-	#TEMPERATURE_WAIT SENSOR=extruder MINIMUM={noOozeToolTemp}
-    #WIPE_NOZZLE
-	#G28	Z
-
     # Set final nozzle temperature
     SET_HEATER_TEMPERATURE HEATER=extruder TARGET={toolTemp}
-
-    # Leave printhead over purge bucket to catch drooping
-    #G90
-	#G0 X{purgeX} Y{purgeY}
     
 	TEMPERATURE_WAIT SENSOR=heater_bed MINIMUM={bedTemp}
 	TEMPERATURE_WAIT SENSOR=extruder MINIMUM={toolTemp}
 
-    # Final nozzle wipe
     WIPE_NOZZLE
-
-    # Reset some stuff (it was like this)
-	M82 								# absolute extrusion mode
-	M220 S100 							# Reset Feedrate
-	M221 S100 							# Reset Flowrate
-
 	LINE_PURGE
 
 [delayed_gcode delayed_printer_off]
