--- a/config/printer.cfg
+++ b/config/printer.cfg
@@ -165,7 +165,7 @@ sda_pin: host:gpio27
 #sda_pin: PA15
 delay: 20 # 20us per pulse, this value should be >=18 but must be below 30
 z_offset: 0 # this `z_offset` must be set to 0. 
-z_adjust: 0.1 # z axis adjustment, replace the z_offset function. within -0.3 to 0.3mm
+z_adjust: 0 # z axis adjustment, replace the z_offset function. within -0.3 to 0.3mm
 x_offset: -23.5
 y_offset: 0
 no_stop_probe: # enable this for fast probe, the toolhead will not stop at the probe point.
@@ -201,6 +201,7 @@ max_accel: 4400
 max_accel_to_decel: 4400
 
 [gcode_arcs]
+resolution: 0.1
 
 # Creality CR-6 SE specific configuration
 # The START_PRINT and END_PRINT macro's are called in the slicer start code
