New backup from 17-03-24

--- a/config/macros.cfg
+++ b/config/macros.cfg
@@ -13,7 +13,7 @@ gcode:
 	G28
 	#M104 S0		#switch off heater as it was switched on after homing
 	BED_MESH_CALIBRATE
-	SAVE_CONFIG
+	#SAVE_CONFIG
 	M140 S0
 	M104 S0
 
@@ -27,7 +27,7 @@ gcode:
 	{% set bedTemp = params.BED_TEMP|int %}
 
 	{% set purgeX = 248 %}
-	{% set purgeY = 50 %}
+	{% set purgeY = 65 %}
 
     # Adjust Z-offset when using higher print temparatures (for whatever reason, it was like this)
 	SET_GCODE_OFFSET Z=0
@@ -42,7 +42,7 @@ gcode:
 	SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={60}
 	G28
     SET_HEATER_TEMPERATURE HEATER=extruder TARGET={noOozeToolTemp}
-    TEMPERATURE_WAIT SENSOR=heater_bed MINIMUM={60}
+    TEMPERATURE_WAIT SENSOR=heater_bed MINIMUM={59}
     
     BED_MESH_CALIBRATE
 
@@ -51,7 +51,7 @@ gcode:
 
     # Leave printhead over purge bucket
     G90
-	G0 X{purgeX} Y{purgeY}
+	G0 X{purgeX} Y{purgeY} F6000
 
     # Set final nozzle temperature
     SET_HEATER_TEMPERATURE HEATER=extruder TARGET={toolTemp}
