--- a/config/macros.cfg
+++ b/config/macros.cfg
@@ -39,10 +39,10 @@ gcode:
     #BED_MESH_PROFILE LOAD=default
 
     # Calibrate mesh adaptively
-	SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={bedTemp}
+	SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={60}
 	G28
     SET_HEATER_TEMPERATURE HEATER=extruder TARGET={noOozeToolTemp}
-    TEMPERATURE_WAIT SENSOR=heater_bed MINIMUM={bedTemp - 1}
+    TEMPERATURE_WAIT SENSOR=heater_bed MINIMUM={59}
     
     BED_MESH_CALIBRATE
 
